--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,15 @@
 /* вторичный цвет фона #2F303A */
 /* вторичный цвет фона #F5F4FA */
 /*цвет фона в секции hero #2F303A*/
-
+/*цвет бордер в хедере #ECECEC*/
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 :root {
   --primery-text-color: #757575;
   --title-text-color: #212121;
@@ -16,6 +24,7 @@
   --primary-button-color: #f5f4fa;
   --primary-footer-color: #2f303a;
   --adress-color: rgba(255, 255, 255, 0.6);
+  --border-color-header: #ECECEC;
 }
 body {
   background-color: var(--primary-bg-color);
@@ -23,6 +32,31 @@ body {
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
 }
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.list {
+  padding: 0;
+  margin: 0;
+
+  list-style: none;
+}
+/*оформление header*/
+header {
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+
+  border-color: var(--border-color-header);
+}
+.header-nav {
+  display: flex;
+  align-items: center; 
+}
+
 .logo {
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -36,11 +70,27 @@ body {
 .secondpart-logo {
   color: var(--title-text-color);
 }
-.footer-logo {
+.logo-footer {
+  margin-top: 0;
+
   color: var(--primary-bg-color);
 }
 /*site-nav*/
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+}
+.site-nav .item {
+  margin-right: 50px;
+}
+.site-nav .item:last-child {
+  margin-right: 0;
+}
 .site-nav a {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   color: var(--title-text-color);
   font-size: 14px;
   font-weight: 500;
@@ -55,7 +105,21 @@ body {
   color: var(--accent-color);
 }
 /*site-adress*/
+.site-adress {
+  display: flex;
+  margin-left: auto;
+}
+.site-adress .item {
+  margin-right: 50px;
+}
+.site-adress .item:last-child {
+  margin-right: 0;
+}
 .site-adress a {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   color: var(--primery-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -69,22 +133,32 @@ body {
 /*Hero*/
 .hero {
   background-color: #2f303a;
+  
+  text-align: center;
 }
 .hero-title {
+  padding-top: 200px;
+  margin-top: 0;
+  margin-bottom: 30px;
+
   color: #fff;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
 .pointer {
+  border-radius: 4px;
+  min-width: 200px;
+  padding: 10px 32px;
+  border: 1px transparent;
+  margin-bottom: 200px;
+
   font-weight: 700;
   font-size: 16px;
   font-family: inherit;
   line-height: 1.88;
-  display: flex;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
@@ -93,47 +167,119 @@ body {
 .pointer:focus {
   cursor: pointer;
   background-color: var(--accent-color);
+  color: var(--primary-bg-color);
 }
 /*оформление section*/
+
+.company {
+  margin-top: 0;
+  margin-bottom: 0;
+  display: none;
+ 
+}
+.section {
+  margin-bottom: 94px;
+}
+.advantag {
+  display: flex;
+  justify-content: center;
+}
+.point {
+  width: 270px;  
+}  
 .section .advantages {
   color: var(--title-text-color);
 }
 .advantages {
+  margin-top: 94px;
+  margin-bottom: 10px;
+
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
   text-transform: uppercase;
 }
 .advantages-list {
+  margin-bottom: 0;
   font-size: 14px;
-  line-height: 1.71;
+  line-height: 1.71; 
 }
 /*оформление feature*/
+
+
 .feature .title-work {
   color: var(--title-text-color);
 }
 .title-work {
+  margin-top: 0;
+  margin-bottom: 50px;
+
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
 }
+.occupation {
+  display: flex;
+  flex-wrap: wrap;
+}
+.picture {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 0;
+}
+.picture:nth-child(3n) {
+  margin-right: 0;
+}
+.picture:nth-last-child(-n+3) {
+  margin-bottom: 0;
+}
 /*оформление team*/
+.team {
+  margin-top: 94px;
+  margin-bottom: 0;
+}
 .title-time {
+  padding-top: 94px;
+  margin-bottom: 50px;
+  margin-top: 0;
+
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
 }
+.down {
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 94px;
+}
+.members {
+  width: 270px;
+  margin-right: 30px;
+}
+.members:nth-child(4n) {
+  margin-right: 0;
+}
+.members:nth-last-child(-n+4) {
+  margin-bottom: 0;
+}
 .title-name {
+  margin-top: 30px;
+  margin-bottom: 50px;
+
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
 }
+
+
 .job-title {
+  margin-bottom: 0;
+
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
@@ -171,15 +317,26 @@ footer {
   color: var(--adress-color);
 }
 
-.list {
-  list-style: none;
-}
-/*оформление кнопок портфолио*/
-.button {
-  display: inline;
-}
 /*portfolio*/
+.all {
+  padding-top: 94px;
+  margin-bottom: 94px;
+}
+
+/*оформление кнопок портфолио*/
+.midlle {
+  margin-bottom: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.button {
+  margin-right: 8px;
+}
+
 .filter {
+  border-radius: 4px;
+
   color: var(--title-text-color);
   background-color: var(--primary-button-color);
   font-family: inherit;
@@ -193,6 +350,23 @@ footer {
   background-color: var(--accent-color);
   color: var(--primary-bg-color);
 }
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.portfolio {
+  width: 370px;
+  background-color: #2196f3;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.portfolio:nth-child(3n) {
+  margin-right: 0;
+}
+.portfolio:nth-last-child(-n+3) {
+  margin-bottom: 0;
+}
 .portfolio .title {
   color: var(--title-text-color);
 }
@@ -204,6 +378,8 @@ footer {
   letter-spacing: 0.06em;
 }
 .different {
+  margin-bottom: 0;
+
   font-size: 16px;
   line-height: 1.14;
 }
