--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,10 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .list {
   padding: 0;
   margin: 0;
@@ -133,14 +137,14 @@ header {
 }
 /*Hero*/
 .hero {
+  padding-top: 200px; 
+  padding-bottom: 200px;
   background-color: #2f303a;
-  
   text-align: center;
 }
 .hero-title {
-  padding-top: 200px;
-  margin-top: 0;
-  margin-bottom: 30px;
+  margin: 0 auto 30px;
+  width: 696px;
 
   color: #fff;
   font-weight: 900;
@@ -154,7 +158,6 @@ header {
   min-width: 200px;
   padding: 10px 32px;
   border: 1px transparent;
-  margin-bottom: 200px;
 
   font-weight: 700;
   font-size: 16px;
@@ -163,6 +166,10 @@ header {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
+  background-color: var(--primary-bg-color);
+}
+.text-button {
+  color: black;
 }
 .pointer:hover,
 .pointer:focus {
@@ -178,21 +185,19 @@ header {
   display: none;
  
 }
-.section {
-  margin-bottom: 94px;
-}
+
 .advantag {
   display: flex;
   justify-content: center;
 }
 .point {
-  width: 270px;  
+  width: 270px;
+  margin: 0 auto;  
 }  
 .section .advantages {
   color: var(--title-text-color);
 }
 .advantages {
-  margin-top: 94px;
   margin-bottom: 10px;
 
   font-weight: 700;
@@ -223,23 +228,21 @@ header {
 .occupation {
   display: flex;
   flex-wrap: wrap;
+  padding: 0;
 }
 .picture {
-  width: 370px;
-  margin-right: 30px;
+  width: calc((100%-60px)/3);
+  margin-right: auto;
   margin-bottom: 0;
 }
-.picture:nth-child(3n) {
+.occupation:nth-child(3n) {
   margin-right: 0;
 }
 .picture:nth-last-child(-n+3) {
   margin-bottom: 0;
 }
 /*оформление team*/
-.team {
-  margin-top: 94px;
-  margin-bottom: 0;
-}
+
 .title-time {
   padding-top: 94px;
   margin-bottom: 50px;
@@ -266,10 +269,14 @@ header {
 .members:nth-last-child(-n+4) {
   margin-bottom: 0;
 }
+.aligment {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  
+}
 .title-name {
-  margin-top: 30px;
-  margin-bottom: 50px;
-
+  margin-bottom: 0;
+  margin-top: 0;
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -279,8 +286,8 @@ header {
 
 
 .job-title {
+  margin-top: 10px;
   margin-bottom: 0;
-
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
@@ -321,24 +328,27 @@ footer {
 }
 
 /*portfolio*/
-.all {
-  padding-top: 94px;
-  margin-bottom: 94px;
-}
+
 
 /*оформление кнопок портфолио*/
 .midlle {
-  margin-bottom: 50px;
+  padding-top: 0 ;
+  padding-bottom: 50px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  
 }
 .button {
+  margin-right: 8px; 
+}
+.button :nth-child(5n) {
   margin-right: 8px;
 }
 
 .filter {
   border-radius: 4px;
+  padding: 6px 22px;
 
   color: var(--title-text-color);
   background-color: var(--primary-button-color);
@@ -360,7 +370,6 @@ footer {
 
 .portfolio {
   width: 370px;
-  background-color: #2196f3;
   margin-right: 30px;
   margin-bottom: 30px;
 }
@@ -373,7 +382,14 @@ footer {
 .portfolio .title {
   color: var(--title-text-color);
 }
+.characteristic {
+  border: 1px solid blue;
+  padding: 20px 24px;
+  background-color: var(--primary-bg-color);
+}
 .title-list {
+  margin-bottom: 0;
+  margin-top: 0;
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
@@ -381,8 +397,9 @@ footer {
   letter-spacing: 0.06em;
 }
 .different {
+  
+  margin-top: 4px;
   margin-bottom: 0;
-
   font-size: 16px;
   line-height: 1.14;
 }
