--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ body {
   padding-right: 15px;
 }
 .section {
- 
+  padding-top: 94px;
   padding-bottom: 94px;
 }
 .list {
@@ -138,6 +138,7 @@ header {
 }
 /*Hero*/
 .hero {
+  
   padding-top: 200px; 
   padding-bottom: 200px;
   background-color: #2f303a;
@@ -213,7 +214,8 @@ header {
 }
 /*оформление feature*/
 .feature {
-  padding-bottom: 0;
+  padding-bottom: 94px;
+  padding-top: 0;
 }
 
 .feature .title-work {
@@ -239,13 +241,13 @@ header {
   margin-left: 30px;
 }
 
-.occupation:nth-last-child(-n+3) {
+.occupation:not(:last-child)(-n+3) {
   margin-bottom: 0;
 }
 /*оформление team*/
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  
+padding-bottom: 94px;
 }
 .title-time {
   
@@ -309,6 +311,7 @@ footer {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
+  margin-bottom: 20px;
 }
 .address {
   font-style: normal;
@@ -325,6 +328,8 @@ footer {
 }
 
 .mail {
+  margin-top: 9px;
+  margin-bottom: 9px;
   font-size: 14px;
   line-height: 1.71;
   color: var(--adress-color);
@@ -345,16 +350,14 @@ footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  
+
 }
-.button {
-  margin-right: 8px; 
-}
-.button:not-last-child {
+.button:not(:last-child) {
   margin-right: 8px;
 }
 
 .filter {
+  border: none;
   border-radius: 4px;
   padding: 6px 22px;
 
